--- a/dezel/build.gradle
+++ b/dezel/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 	testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'com.google.android.material:material:1.2.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test:rules:1.3.0'
